--- a/media/css/home.scss
+++ b/media/css/home.scss
@@ -7,14 +7,27 @@
 .short-width {
 	max-width: 380px;
 }
-.offset-top {
-	padding-top: 154px;
+.offset-top-1 {
+	padding-top: 91px;
 }
-.offset-top-large {
-	padding-top: 144px;
+.offset-bottom-1 {
+	padding-bottom: 91px;
+}
+.offset-top-2 {
+	padding-top: 58px;
+}
+.offset-bottom-2 {
+	padding-bottom: 58px;
+}
+.offset-top-3 {
+	padding-top: 34px;
+}
+.offset-bottom-3 {
+	padding-bottom: 34px;
 }
 .me {
 	border-radius: 50%;
+	border-bottom-left-radius: 0;
 	margin-bottom: 18px;
 	box-shadow: 0 2px 5px rgba(black, 0.15), 0 0 20px rgba(black, 0.12);
 }
