--- a/media/css/responsive.scss
+++ b/media/css/responsive.scss
@@ -1,4 +1,7 @@
 @media (max-width: 959px) {
+	.tablet-hide {
+		display: none;
+	}
 	.container {
 		display: block;
 		> div {
@@ -7,7 +10,7 @@
 	}
 	.grid {
 		width: 100% !important;
-		padding: 10px;
+		padding: 12px 0;
 	}
 	.offset-top {
 		padding-top: 0;
@@ -24,11 +27,37 @@
 	.mobile-align-center {
 		text-align: center;
 	}
+
+	.hi-im {
+		padding-right: 176px;
+	}
+
+	.me {
+		float: left;
+		margin-right: 18px;
+		margin-bottom: 0;
+		width: 120px;
+		margin-top: -6px;
+	}
+
+
+
+	.container.wide {
+		@include cover();
+	}
+	.img-viewer {
+		@include cover();
+		height: auto;
+		margin: 0 -15px;
+		&:after {
+			display: none;
+		}
+	}
 }
 
 @media (max-width: 767px) {
 	.hi-im {
-		padding-right: 178px;
+		padding-right: 145px;
 	}
 	.mobile-hide {
 		display: none;
