--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1,11 +1,10 @@
-@charset "IBM437";
+@charset "UTF-8";
 @font-face {
   font-family: 'fontawesome';
   src: url("../fonts/fontawesome.eot?65515088");
   src: url("../fonts/fontawesome.eot?65515088#iefix") format("embedded-opentype"), url("../fonts/fontawesome.woff?65515088") format("woff"), url("../fonts/fontawesome.ttf?65515088") format("truetype"), url("../fonts/fontawesome.svg?65515088#fontawesome") format("svg");
   font-weight: normal;
   font-style: normal; }
-
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
 /*
@@ -154,7 +153,6 @@ img {
   src: url("../fonts/ATCOverlook-Heavy.eot?#iefix") format("embedded-opentype"), url("../fonts/ATCOverlook-Heavy.woff") format("woff"), url("../fonts/ATCOverlook-Heavy.ttf") format("truetype"), url("../fonts/ATCOverlook-Heavy.svg#e66f84803eb699012366a69da3d2a854") format("svg");
   font-style: normal;
   font-weight: 600; }
-
 body {
   font-family: "Merriweather", Georgia, Serif;
   font-size: 24px;
@@ -182,41 +180,45 @@ h1, h2, h3, h4 {
 h1 {
   font-size: 96px;
   line-height: 72px;
-  margin-bottom: 2px;
-  padding-bottom: 12px; }
+  margin-top: -7px;
+  margin-bottom: 2px; }
 
 h2 {
   font-size: 72px;
   line-height: 60px;
-  margin-bottom: -1px;
-  padding-bottom: 12px; }
+  margin-bottom: -1px; }
 
 h3 {
   font-size: 48px;
   line-height: 48px;
-  margin-bottom: -5px;
-  padding-bottom: 12px; }
+  margin-bottom: -5px; }
 
 h4 {
   font-size: 24px;
   line-height: 30px;
-  margin-bottom: -6px;
-  padding-bottom: 12px; }
+  margin-bottom: -6px; }
 
 .f-large {
   font-size: 30px;
   line-height: 36px;
+  margin-top: -4px;
   margin-bottom: -9px; }
 
 .f-medium {
   font-size: 24px;
   line-height: 30px;
+  margin-top: -4px;
   margin-bottom: -8px; }
 
 .f-small {
   font-size: 18px;
   line-height: 24px;
-  margin-bottom: -7px; }
+  margin-top: -3px;
+  margin-bottom: -7px;
+  padding-bottom: 6px; }
+
+.padding-bottom {
+  padding-bottom: 12px; }
 
 a {
   text-decoration: none;
@@ -232,6 +234,7 @@ a {
 
 button,
 .button {
+  display: inline-block;
   font-family: "ATC Overlook";
   font-size: 24px;
   text-transform: uppercase;
@@ -257,10 +260,11 @@ button,
   .button:focus {
     outline: none; }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
   h1 {
     font-size: 60px;
     line-height: 48px;
+    margin-top: -6px;
     margin-bottom: 0px; }
 
   h2 {
@@ -281,17 +285,51 @@ button,
   .f-large {
     font-size: 24px;
     line-height: 30px;
+    margin-top: -4px;
     margin-bottom: -8px; }
 
   .f-medium {
     font-size: 18px;
     line-height: 24px;
+    margin-top: -3px;
     margin-bottom: -7px; }
 
   .f-small {
     font-size: 14px;
     line-height: 18px;
-    margin-bottom: -5px; } }
+    margin-bottom: -5px; }
+
+  button,
+  .button {
+    margin-top: 24px; } }
+@media (max-width: 567px) {
+  h1 {
+    font-size: 48px;
+    line-height: 48px;
+    margin-top: -9px;
+    margin-bottom: -5px; }
+
+  .f-large {
+    font-size: 18px;
+    line-height: 24px;
+    margin-top: -3px;
+    margin-bottom: -7px; }
+
+  .f-medium {
+    font-size: 14px;
+    line-height: 18px;
+    margin-top: -2px;
+    margin-bottom: -5px; }
+
+  .f-small {
+    font-size: 12px;
+    line-height: 14px;
+    margin-top: -1px;
+    margin-bottom: -5px; }
+
+  button,
+  .button {
+    margin-top: 12px; } }
 /**
  * fullPage 2.1.5
  * https://github.com/alvarotrigo/fullPage.js
@@ -304,7 +342,7 @@ html, body {
   padding: 0;
   overflow: hidden;
   /*Avoid flicker on slides transitions for mobile phones #336 */
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  -webkit-tap-highlight-color: transparent; }
 
 #superContainer {
   height: 100%;
@@ -441,7 +479,7 @@ html, body {
   width: 8px;
   height: 8px;
   border: 1px solid #000;
-  background: rgba(0, 0, 0, 0);
+  background: transparent;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
@@ -470,14 +508,27 @@ html, body {
 .short-width {
   max-width: 380px; }
 
-.offset-top {
-  padding-top: 154px; }
+.offset-top-1 {
+  padding-top: 91px; }
 
-.offset-top-large {
-  padding-top: 144px; }
+.offset-bottom-1 {
+  padding-bottom: 91px; }
+
+.offset-top-2 {
+  padding-top: 58px; }
+
+.offset-bottom-2 {
+  padding-bottom: 58px; }
+
+.offset-top-3 {
+  padding-top: 34px; }
+
+.offset-bottom-3 {
+  padding-bottom: 34px; }
 
 .me {
   border-radius: 50%;
+  border-bottom-left-radius: 0;
   margin-bottom: 18px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15), 0 0 20px rgba(0, 0, 0, 0.12); }
 
@@ -625,6 +676,9 @@ section {
     -webkit-text-fill-color: initial; }
 
 @media (max-width: 959px) {
+  .tablet-hide {
+    display: none; }
+
   .container {
     display: block; }
     .container > div {
@@ -632,7 +686,7 @@ section {
 
   .grid {
     width: 100% !important;
-    padding: 10px; }
+    padding: 12px 0; }
 
   .offset-top {
     padding-top: 0; }
@@ -647,10 +701,38 @@ section {
     text-align: inherit; }
 
   .mobile-align-center {
-    text-align: center; } }
+    text-align: center; }
+
+  .hi-im {
+    padding-right: 176px; }
+
+  .me {
+    float: left;
+    margin-right: 18px;
+    margin-bottom: 0;
+    width: 120px;
+    margin-top: -6px; }
+
+  .container.wide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; }
+
+  .img-viewer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: auto;
+    margin: 0 -15px; }
+    .img-viewer:after {
+      display: none; } }
 @media (max-width: 767px) {
   .hi-im {
-    padding-right: 178px; }
+    padding-right: 145px; }
 
   .mobile-hide {
     display: none;
