--- a/media/css/typography.scss
+++ b/media/css/typography.scss
@@ -40,41 +40,45 @@ h1,h2,h3,h4 {
 h1 {
 	font-size: 96px;
 	line-height: 72px;
+	margin-top: -7px;
 	margin-bottom: 2px;
-	padding-bottom: 12px;
 }
 h2 {
 	font-size: 72px;
 	line-height: 60px;
 	margin-bottom: -1px;
-	padding-bottom: 12px;
 }
 h3 {
 	font-size: 48px;
 	line-height: 48px;
 	margin-bottom: -5px;
-	padding-bottom: 12px;
 }
 h4 {
 	font-size: 24px;
 	line-height: 30px;
 	margin-bottom: -6px;
-	padding-bottom: 12px;
 }
 .f-large {
 	font-size: 30px;
 	line-height: 36px;
+	margin-top: -4px;
 	margin-bottom: -9px;
 }
 .f-medium {
 	font-size: 24px;
 	line-height: 30px;
+	margin-top: -4px;
 	margin-bottom: -8px;
 }
 .f-small {
 	font-size: 18px;
 	line-height: 24px;
+	margin-top: -3px;
 	margin-bottom: -7px;
+	padding-bottom: 6px;
+}
+.padding-bottom {
+	padding-bottom: 12px;
 }
 // p {
 // 	&.f-large {
@@ -105,6 +109,7 @@ a {
 }
 button,
 .button {
+	display: inline-block;
 	font-family: "ATC Overlook";
 	font-size: 24px;
 	text-transform: uppercase;
@@ -132,10 +137,11 @@ button,
 	}
 }
 
-@media (max-width: 767px) {
+@media (max-width: 959px) {
 	h1 {
 		font-size: 60px;
 		line-height: 48px;
+		margin-top: -6px;
 		margin-bottom: 0px;
 	}
 	h2 {
@@ -156,16 +162,53 @@ button,
 	.f-large {
 		font-size: 24px;
 		line-height: 30px;
+		margin-top: -4px;
 		margin-bottom: -8px;
 	}
 	.f-medium {
 		font-size: 18px;
 		line-height: 24px;
+		margin-top: -3px;
 		margin-bottom: -7px;
 	}
 	.f-small {
 		font-size: 14px;
 		line-height: 18px;
 		margin-bottom: -5px;
+	}
+	button,
+	.button {
+		margin-top: 24px;
+	}
+}
+@media (max-width: 567px) {
+	h1 {
+		font-size: 48px;
+		line-height: 48px;
+		margin-top: -9px;
+		margin-bottom: -5px;
+	}
+	.f-large {
+		font-size: 18px;
+		line-height: 24px;
+		margin-top: -3px;
+		margin-bottom: -7px;
+	}
+	.f-medium {
+		font-size: 14px;
+		line-height: 18px;
+		margin-top: -2px;
+		margin-bottom: -5px;
+	}
+	.f-small {
+		font-size: 12px;
+		line-height: 14px;
+		margin-top: -1px;
+		margin-bottom: -5px;
+	}
+
+	button,
+	.button {
+		margin-top: 12px;
 	}
 }
