--- a/media/css/home.scss
+++ b/media/css/home.scss
@@ -5,7 +5,7 @@
 	padding-right: 313px;
 }
 .short-width {
-	max-width: 380px;
+	max-width: 360px;
 }
 .offset-top-1 {
 	padding-top: 91px;
@@ -14,33 +14,54 @@
 	padding-bottom: 91px;
 }
 .offset-top-2 {
-	padding-top: 58px;
+	padding-top: 40px;
 }
 .offset-bottom-2 {
-	padding-bottom: 58px;
+	padding-bottom: 40px;
 }
 .offset-top-3 {
-	padding-top: 34px;
+	padding-top: 40px;
 }
 .offset-bottom-3 {
-	padding-bottom: 34px;
+	padding-bottom: 40px;
+}
+
+.me-blurry {
+	@include cover();
+	background-image: url('../images/me-blurry.jpg');
+	background-size: cover;
+	background-position: center;
+	opacity: 0.3;
+	transition: 1s ease;
+	pointer-events: none;
 }
 .me {
+	position: relative;
+	z-index: 1;
 	border-radius: 50%;
 	border-bottom-left-radius: 0;
+	transition: 1s ease;
 	margin-bottom: 18px;
 	box-shadow: 0 2px 5px rgba(black, 0.15), 0 0 20px rgba(black, 0.12);
+	&:hover {
+		border-radius: 0;
+		+ .me-blurry {
+			opacity: 1;
+		}
+	}
 }
+
 .img-viewer {
 	position: relative;
 	background: #eee;
 	height: 90vh;
 	overflow: hidden;
-	&:after {
+	box-shadow: 0 2px 5px rgba(black, 0.25), 0 0 20px rgba(black, 0.4);
+	/* &:after {
 		content: "";
 		@include cover;
 		box-shadow: inset 0 2px 5px rgba(black, 0.25), inset 0 0 20px rgba(black, 0.4);
-	}
+	} */
 	img {
 		position: absolute;
 		height: 100%;
@@ -52,23 +73,12 @@ h1 + p {
 
 
 .animate-before {
-	visibility: hidden;
 	opacity: 0;
 	-webkit-transform: translateZ(0);
 	-webkit-filter: blur(5px);
-	-webkit-transition: -webkit-filter 2.2s ease, opacity 1s ease;
-}
-.animate-before-2 {
-	-webkit-transition: -webkit-filter 2.3s ease, opacity 1.5s ease;
-}
-.animate-before-3 {
-	-webkit-transition: -webkit-filter 2.4s ease, opacity 2s ease;
-}
-.animate-before-4 {
-	-webkit-transition: -webkit-filter 2.5s ease, opacity 2.5s ease;
+	-webkit-transition: 2s ease;
 }
 .animate-after {
-	visibility: visible;
 	opacity: 1;
 	-webkit-filter: blur(0px);
 }
@@ -110,7 +120,7 @@ section {
 	&.bg-blue {
 		@include gradient(#0c1707, #243638);
 		.text {
-			position: relative;
+			// position: relative;
 			@include text-gradient(#fdeeb5, #e95f5c);
 		}
 		a {
@@ -131,7 +141,7 @@ section {
 			border-width: 2px;
 			box-shadow: 0 2px 5px rgba($yellow, 0.15), 0 0 20px rgba($yellow, 0.12);
 			&:hover {
-				box-shadow: 0 2px 8px rgba($yellow, 0.35), 0 0 30px rgba($yellow, 0.17);
+				box-shadow: 0 2px 8px rgba($yellow, 0.35), 0 0 30px rgba($yellow, 0.32);
 				&:active {
 					box-shadow: none;
 					border-color: initial;
