--- a/media/css/style.css
+++ b/media/css/style.css
@@ -186,6 +186,7 @@ h1 {
 h2 {
   font-size: 72px;
   line-height: 60px;
+  margin-top: -9px;
   margin-bottom: -1px; }
 
 h3 {
@@ -506,7 +507,7 @@ html, body {
   padding-right: 313px; }
 
 .short-width {
-  max-width: 380px; }
+  max-width: 360px; }
 
 .offset-top-1 {
   padding-top: 91px; }
@@ -515,36 +516,54 @@ html, body {
   padding-bottom: 91px; }
 
 .offset-top-2 {
-  padding-top: 58px; }
+  padding-top: 40px; }
 
 .offset-bottom-2 {
-  padding-bottom: 58px; }
+  padding-bottom: 40px; }
 
 .offset-top-3 {
-  padding-top: 34px; }
+  padding-top: 40px; }
 
 .offset-bottom-3 {
-  padding-bottom: 34px; }
+  padding-bottom: 40px; }
+
+.me-blurry {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url("../images/me-blurry.jpg");
+  background-size: cover;
+  background-position: center;
+  opacity: 0.3;
+  transition: 1s ease;
+  pointer-events: none; }
 
 .me {
+  position: relative;
+  z-index: 1;
   border-radius: 50%;
   border-bottom-left-radius: 0;
+  transition: 1s ease;
   margin-bottom: 18px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15), 0 0 20px rgba(0, 0, 0, 0.12); }
+  .me:hover {
+    border-radius: 0; }
+    .me:hover + .me-blurry {
+      opacity: 1; }
 
 .img-viewer {
   position: relative;
   background: #eee;
   height: 90vh;
-  overflow: hidden; }
-  .img-viewer:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.25), inset 0 0 20px rgba(0, 0, 0, 0.4); }
+  overflow: hidden;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25), 0 0 20px rgba(0, 0, 0, 0.4);
+  /* &:after {
+  	content: "";
+  	@include cover;
+  	box-shadow: inset 0 2px 5px rgba(black, 0.25), inset 0 0 20px rgba(black, 0.4);
+  } */ }
   .img-viewer img {
     position: absolute;
     height: 100%; }
@@ -553,23 +572,12 @@ h1 + p {
   clear: right; }
 
 .animate-before {
-  visibility: hidden;
   opacity: 0;
   -webkit-transform: translateZ(0);
   -webkit-filter: blur(5px);
-  -webkit-transition: -webkit-filter 2.2s ease, opacity 1s ease; }
-
-.animate-before-2 {
-  -webkit-transition: -webkit-filter 2.3s ease, opacity 1.5s ease; }
-
-.animate-before-3 {
-  -webkit-transition: -webkit-filter 2.4s ease, opacity 2s ease; }
-
-.animate-before-4 {
-  -webkit-transition: -webkit-filter 2.5s ease, opacity 2.5s ease; }
+  -webkit-transition: 2s ease; }
 
 .animate-after {
-  visibility: visible;
   opacity: 1;
   -webkit-filter: blur(0px); }
 
@@ -606,7 +614,6 @@ section {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$start', endColorstr='$end',GradientType=1 );
     /* IE6-9 fallback on horizontal gradient */ }
     section.bg-blue .text {
-      position: relative;
       background: -webkit-gradient(linear, left top, right top, from(#fdeeb5), to(#e95f5c));
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -644,7 +651,7 @@ section {
       box-shadow: 0 2px 5px rgba(255, 184, 0, 0.15), 0 0 20px rgba(255, 184, 0, 0.12); }
       section.bg-black a:hover,
       section.bg-black button:hover {
-        box-shadow: 0 2px 8px rgba(255, 184, 0, 0.35), 0 0 30px rgba(255, 184, 0, 0.17); }
+        box-shadow: 0 2px 8px rgba(255, 184, 0, 0.35), 0 0 30px rgba(255, 184, 0, 0.32); }
         section.bg-black a:hover:active,
         section.bg-black button:hover:active {
           box-shadow: none;
@@ -727,9 +734,10 @@ section {
     right: 0;
     bottom: 0;
     height: auto;
-    margin: 0 -15px; }
-    .img-viewer:after {
-      display: none; } }
+    margin: 0 -15px;
+    /* &:after {
+    	display: none;
+    } */ } }
 @media (max-width: 767px) {
   .hi-im {
     padding-right: 145px; }
