--- a/media/css/style.css
+++ b/media/css/style.css
@@ -691,6 +691,9 @@ section {
     .container > div {
       display: block; }
 
+  section {
+    padding: 0 12px; }
+
   .grid {
     width: 100% !important;
     padding: 12px 0; }
@@ -725,7 +728,9 @@ section {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0; }
+    bottom: 0;
+    left: 12px;
+    right: 12px; }
 
   .img-viewer {
     position: absolute;
@@ -734,7 +739,7 @@ section {
     right: 0;
     bottom: 0;
     height: auto;
-    margin: 0 -15px;
+    margin: 0 -12px;
     /* &:after {
     	display: none;
     } */ } }
