--- a/media/css/style.css
+++ b/media/css/style.css
@@ -574,12 +574,10 @@ h1 + p {
 .animate-before {
   opacity: 0;
   -webkit-transform: translateZ(0);
-  -webkit-filter: blur(5px);
   -webkit-transition: 2s ease; }
 
 .animate-after {
-  opacity: 1;
-  -webkit-filter: blur(0px); }
+  opacity: 1; }
 
 @media (max-width: 767px) {
   .hero {
