--- a/pathologic/css/style.css
+++ b/pathologic/css/style.css
@@ -405,7 +405,7 @@ h1, h2, h3, h4, h5 {
   margin-bottom: 15px; }
 
 h1, h2, h3, h4, h5, .btn-large {
-  font-family: "Vollkorn";
+  font-family: "Quattrocento";
   font-weight: normal;
   line-height: 1; }
 
@@ -419,6 +419,20 @@ h2 {
 p {
   margin-bottom: 15px; }
 
+img {
+  display: block;
+  width: 100%; }
+
+a {
+  color: inherit;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: transparent;
+  /* For some Androids */ }
+  a:active {
+    position: relative;
+    top: 1px; }
+
+/* Buttons */
 .btn {
   display: block;
   position: relative;
@@ -431,6 +445,8 @@ p {
   text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.4);
   text-transform: uppercase;
   text-align: center;
+  text-decoration: none;
+  font-weight: bold;
   background-position: 10% 90%; }
   .btn:before, .btn:after {
     content: "";
@@ -470,7 +486,7 @@ p {
 .btn-large {
   display: table;
   width: auto;
-  padding: 13px 20px 7px;
+  padding: 13px 30px 10px;
   margin-bottom: 15px;
   background-position: center 90%;
   background-size: cover; }
@@ -482,17 +498,10 @@ p {
     top: 5px;
     bottom: 5px; }
 
-img {
-  display: block;
-  width: 100%; }
-
-a {
-  color: inherit; }
-  a:active {
-    position: relative;
-    top: 1px; }
-
 /* Sections */
+section {
+  overflow: hidden; }
+
 .section-header {
   margin-top: -3%; }
 
@@ -544,7 +553,7 @@ a {
   padding: 0 0 30px; }
 
 .hero-text {
-  font-family: "Vollkorn";
+  font-family: "Quattrocento";
   font-size: 16px;
   line-height: 18px;
   padding: 0 15px; }
