--- a/pathologic/css/typography.scss
+++ b/pathologic/css/typography.scss
@@ -9,7 +9,7 @@ h1,h2,h3,h4,h5 {
     margin-bottom: 15px;
 }
 h1,h2,h3,h4,h5,.btn-large {
-    font-family: "Vollkorn";
+    font-family: "Quattrocento";
     font-weight: normal;
     line-height: 1;
 }
