--- a/pathologic/css/style.css
+++ b/pathologic/css/style.css
@@ -358,7 +358,15 @@ th {
   padding: 0; }
 
 * {
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
 
 .u-textUppercase {
   text-transform: uppercase; }
@@ -400,11 +408,20 @@ body {
   line-height: 18px;
   color: #421703; }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   margin-top: 0;
   margin-bottom: 15px; }
 
-h1, h2, h3, h4, h5, .btn-large {
+h1,
+h2,
+h3,
+h4,
+h5,
+.serif {
   font-family: "Quattrocento";
   font-weight: normal;
   line-height: 1; }
@@ -428,7 +445,7 @@ a {
   -webkit-tap-highlight-color: transparent;
   -webkit-tap-highlight-color: transparent;
   /* For some Androids */ }
-  a:active {
+  a:active, a.active {
     position: relative;
     top: 1px; }
 
@@ -438,14 +455,11 @@ a {
   position: relative;
   background: #d0b7a0;
   background-image: url("../images/bg-btn.jpg");
-  width: 23px;
-  height: 23px;
-  line-height: 25px;
   color: #533d2a;
   text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.4);
-  text-transform: uppercase;
   text-align: center;
   text-decoration: none;
+  text-transform: uppercase;
   font-weight: bold;
   background-position: 10% 90%; }
   .btn:before, .btn:after {
@@ -470,18 +484,26 @@ a {
   .btn:hover {
     cursor: pointer;
     box-shadow: 0 0 15px 1px rgba(255, 255, 255, 0.55); }
+    .btn:hover:before {
+      background: rgba(255, 255, 255, 0.05); }
     .btn:hover:after {
-      border-color: rgba(255, 255, 255, 0.55); }
-  .btn:active {
-    box-shadow: none; }
-    .btn:active:before {
+      border-color: rgba(255, 255, 255, 0.3); }
+  .btn:active, .btn.active {
+    box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5); }
+    .btn:active:before, .btn.active:before {
       background: rgba(0, 0, 0, 0.1);
       border-top-color: rgba(0, 0, 0, 0.35);
       border-left-color: rgba(0, 0, 0, 0.35);
       border-bottom-color: rgba(0, 0, 0, 0.75);
       border-right-color: rgba(0, 0, 0, 0.75); }
-    .btn:active:after {
+    .btn:active:after, .btn.active:after {
       border-color: transparent; }
+
+.btn-small {
+  height: 32px;
+  font-size: 19px;
+  line-height: 35px;
+  padding: 0 4px; }
 
 .btn-large {
   display: table;
@@ -497,6 +519,17 @@ a {
     right: 5px;
     top: 5px;
     bottom: 5px; }
+
+.btn-group li {
+  margin-left: -4px; }
+  .btn-group li:first-child {
+    margin-left: 0; }
+.btn-group .btn.active:before {
+  background: rgba(0, 0, 0, 0.2); }
+.btn-group li:first-child .btn.active:before {
+  box-shadow: inset -4px 0px 5px rgba(0, 0, 0, 0.4); }
+.btn-group li:last-child .btn.active:before {
+  box-shadow: inset 4px 0px 5px rgba(0, 0, 0, 0.4); }
 
 /* Sections */
 section {
@@ -537,6 +570,8 @@ section {
     overflow: hidden;
     clear: both; }
 
+.header-social li:first-child a {
+  background-position: 20% 90%; }
 .header-social li:first-child + li a {
   background-position: 20% 90%; }
 .header-social li:first-child + li + li a {
@@ -558,22 +593,26 @@ section {
   line-height: 18px;
   padding: 0 15px; }
 
-/* Features */
-.features-padding {
+/* Slideshow */
+.slideshow {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+.slideshow-padding {
   padding-left: 0;
   padding-right: 0; }
 
+.slick-slide {
+  padding: 0 5px; }
+
+/* Features */
 .features-list {
   padding: 0 10%;
   overflow-y: hidden;
   overflow-x: scroll;
   -webkit-overflow-scrolling: touch;
   -webkit-mask-image: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 255, 255, 0.1)), color-stop(11%, white), color-stop(89%, white), color-stop(100%, rgba(255, 255, 255, 0.1))); }
-
-.features-listItem {
-  vertical-align: top;
-  width: 100%;
-  padding: 0 7px; }
 
 .features-img {
   margin-bottom: 15px; }
