--- a/pathologic/css/style.scss
+++ b/pathologic/css/style.scss
@@ -30,7 +30,8 @@ a {
     color: inherit;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-tap-highlight-color: transparent; /* For some Androids */
-    &:active {
+    &:active,
+    &.active {
         position: relative;
         top: 1px;
     }
@@ -43,14 +44,11 @@ a {
     position: relative;
     background: #d0b7a0;
     background-image: url('../images/bg-btn.jpg');
-    width: 23px;
-    height: 23px;
-    line-height: 25px;
     color: #533d2a;
     text-shadow: 1px 1px 1px rgba(white, 0.4);
-    text-transform: uppercase;
     text-align: center;
     text-decoration: none;
+    text-transform: uppercase;
     font-weight: bold;
     &:before,
     &:after {
@@ -78,12 +76,16 @@ a {
     &:hover {
         cursor: pointer;
         box-shadow: 0 0 15px 1px rgba(white, 0.55);
+        &:before {
+            background: rgba(white, 0.05);
+        }
         &:after {
-            border-color: rgba(white, 0.55);
+            border-color: rgba(white, 0.3);
         }
     }
-    &:active {
-        box-shadow: none;
+    &:active,
+    &.active {
+        box-shadow: inset 0 0 20px rgba(black, 0.5);
         &:before {
             background: rgba(black, 0.1);
             border-top-color: rgba(black, 0.35);
@@ -96,6 +98,12 @@ a {
         }
     }
     background-position: 10% 90%;
+}
+.btn-small {
+    height: 32px;
+    font-size: 19px;
+    line-height: 35px;
+    padding: 0 4px;
 }
 .btn-large {
     display: table;
@@ -114,7 +122,27 @@ a {
         bottom: 5px;
     }
 }
-
+.btn-group {
+    li {
+        margin-left: -4px;
+        &:first-child {
+            margin-left: 0;
+        }
+    }
+    .btn.active:before {
+        background: rgba(0, 0, 0, 0.2);
+    }
+    li:first-child .btn {
+        &.active:before {
+            box-shadow: inset -4px 0px 5px rgba(0,0,0,0.4);
+        }
+    }
+    li:last-child .btn {
+        &.active:before {
+            box-shadow: inset 4px 0px 5px rgba(0,0,0,0.4);
+        }
+    }
+}
 
 
 /* Sections */
@@ -158,23 +186,28 @@ section {
 }
 .header-social {
     li {
-        &:first-child + li { 
+        &:first-child {
             a {
                 background-position: 20% 90%;
             }
-            + li {
+            + li { 
                 a {
-                    background-position: 30% 90%;
+                    background-position: 20% 90%;
                 }
                 + li {
                     a {
-                        background-position: 40% 90%;
+                        background-position: 30% 90%;
                     }
                     + li {
                         a {
-                            background-position: 50% 90%;
+                            background-position: 40% 90%;
                         }
-                    }
+                        + li {
+                            a {
+                                background-position: 50% 90%;
+                            }
+                        }
+                    }   
                 }
             }
         }
@@ -203,23 +236,27 @@ section {
 
 
 
-
-/* Features */
-.features-padding {
+/* Slideshow */
+.slideshow {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.slideshow-padding {
     padding-left: 0;
     padding-right: 0;
 }
+.slick-slide {
+    padding: 0 5px;
+}
+
+/* Features */
 .features-list {
     padding: 0 10%;
     overflow-y: hidden;
     overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
     -webkit-mask-image: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0.1)), color-stop(11%,rgba(255,255,255,1)), color-stop(89%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0.1)));
-}
-.features-listItem {
-    vertical-align: top;
-    width: 100%;
-    padding: 0 7px;
 }
 .features-img {
     margin-bottom: 15px;
