--- a/pathologic/css/typography.scss
+++ b/pathologic/css/typography.scss
@@ -4,11 +4,20 @@ body {
     line-height: 18px;
     color: $brown;
 }
-h1,h2,h3,h4,h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
     margin-top: 0;
     margin-bottom: 15px;
 }
-h1,h2,h3,h4,h5,.btn-large {
+h1,
+h2,
+h3,
+h4,
+h5,
+.serif {
     font-family: "Quattrocento";
     font-weight: normal;
     line-height: 1;
