--- a/pathologic/css/typography.scss
+++ b/pathologic/css/typography.scss
@@ -1,7 +1,7 @@
 body {
     font-family: "Quattrocento Sans";
     font-size: 15px;
-    line-height: 18px;
+    line-height: 20px;
     color: $brown;
 }
 h1,
@@ -28,7 +28,14 @@ h5,
 h2 {
     font-size: 24px;
     line-height: 30px;
+    white-space: nowrap;
 }
 p {
+    max-width: 460px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 15px;
+    &:last-child {
+        margin-bottom: 0;
+    }
 }
