--- a/pathologic/css/typography.scss
+++ b/pathologic/css/typography.scss
@@ -1,7 +1,7 @@
 body {
     font-family: "Quattrocento Sans";
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 17px;
+    line-height: 24px;
     color: $brown;
 }
 h1,
@@ -23,19 +23,52 @@ h5,
     line-height: 1;
 }
 .btn-large {
-    font-size: 30px;
+    font-size: 36px;
 }
 h2 {
-    font-size: 24px;
-    line-height: 30px;
+    font-size: 30px;
+    line-height: 36px;
     white-space: nowrap;
 }
 p {
-    max-width: 460px;
+    max-width: 520px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 15px;
     &:last-child {
         margin-bottom: 0;
+    }
+}
+.large {
+    font-size: 19px;
+    line-height: 26px;
+}
+.small {
+    font-size: 15px;
+    line-height: 17px;
+}
+
+@media (max-width: 767px) {
+    body {
+        font-size: 15px;
+        line-height: 20px;
+    }
+    h2 {
+        font-size: 24px;
+        line-height: 30px;
+    }
+    p {
+        max-width: 460px;
+    }
+    .large {
+        font-size: 17px;
+        line-height: 22px;
+    }
+    .small {
+        font-size: 13px;
+        line-height: 15px;
+    }
+    .btn-large {
+        font-size: 30px;
     }
 }
