--- a/pathologic/css/style.css
+++ b/pathologic/css/style.css
@@ -597,11 +597,12 @@ a {
   padding: 10px 15px 40px; }
 
 .section-light {
-  color: #421703; }
+  color: #421703;
+  text-shadow: 0 0 18px rgba(243, 238, 227, 0.65); }
 
 .section-dark {
   color: #f3eee3;
-  text-shadow: 0 0 18px rgba(0, 0, 0, 0.65); }
+  text-shadow: 0 0 18px rgba(0, 0, 0, 0.65), 1px 1px 1px rgba(0, 0, 0, 0.2); }
 
 /* Header */
 .header {
