--- a/pathologic/css/style.scss
+++ b/pathologic/css/style.scss
@@ -35,8 +35,7 @@ a {
     color: inherit;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-tap-highlight-color: transparent; /* For some Androids */
-    &:active,
-    &.active {
+    &:active {
         position: relative;
         top: 1px;
     }
@@ -181,6 +180,75 @@ section {
 }
 
 
+
+
+
+
+
+/* Menu */
+.menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: black;
+    background: rgba(black, 0.85);
+    text-shadow: 0 0 18px rgba(black, 0.65), 1px 1px 1px rgba(black, 0.2);
+    z-index: 2;
+    color: $cream;
+    font-size: 18px;
+    > div {
+        padding: 10px;
+    }
+
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.5s;
+    &.is-open {
+        opacity: 1;
+        pointer-events: auto;
+    }
+}
+.menu-toggler {
+    margin-top: 10px;
+    top: 0;
+    left: 10px;
+    z-index: 1;
+}
+.menu-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.menu-item {
+    margin-top: 20px;
+}
+.menu-link {
+    text-decoration: none;
+    &:active {
+        text-decoration: underline;
+    }
+}
+.menu-language {
+    display: table;
+    margin: 0 auto;
+}
+.menu-language--label {
+    margin-right: 5px;
+}
+.menu-language--link {
+    cursor: pointer;
+    padding: 2px 2px 0px;
+    &.active {
+        background: $cream;
+        color: $brown;
+        text-shadow: none;
+    }
+}
+
+
+
 /* Header */
 .header {
     position: relative;
@@ -221,9 +289,6 @@ section {
         }
     }
 }
-.header-language {
-    margin-left: 10px;
-}
 .header-nav {
     height: 32px;
     max-width: calc(100% - 122px);
@@ -242,18 +307,11 @@ section {
 
     }
 }
-.header-offCanvas {
-    display: none;
-    &.active {
-        display: block;
-    }
-}
-.header-onCanvas {
-    display: none;
-    &.active {
-        display: block;
-    }
-}
+
+
+
+
+
 
 
 
@@ -305,3 +363,6 @@ section {
 
 
 /* Footer */
+.footer-image {
+    margin-bottom: -20px;
+}
