--- a/pathologic/css/style.css
+++ b/pathologic/css/style.css
@@ -867,31 +867,221 @@ img.mfp-img {
 .mfp-no-margins .mfp-container {
   padding: 0; }
 
-/* 
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -ms-touch-action: none;
+  -webkit-tap-highlight-color: transparent; }
 
-for zoom animation 
-uncomment this part if you haven't added this code anywhere else
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0; }
 
-*/
-.mfp-with-zoom .mfp-container,
-.mfp-with-zoom.mfp-bg {
-  opacity: 0.001;
-  /* chrome opacity transition bug */
-  -webkit-backface-visibility: hidden;
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out; }
+.slick-list:focus {
+  outline: none; }
 
-.mfp-with-zoom.mfp-ready .mfp-container {
+.slick-loading .slick-list {
+  background: white url("./ajax-loader.gif") center center no-repeat; }
+
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand; }
+
+.slick-slider .slick-list, .slick-track, .slick-slide, .slick-slide img {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+  zoom: 1; }
+
+.slick-track:before, .slick-track:after {
+  content: "";
+  display: table; }
+
+.slick-track:after {
+  clear: both; }
+
+.slick-loading .slick-track {
+  visibility: hidden; }
+
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none; }
+
+.slick-slide img {
+  display: block; }
+
+.slick-slide.slick-loading img {
+  display: none; }
+
+.slick-slide.dragging img {
+  pointer-events: none; }
+
+.slick-initialized .slick-slide {
+  display: block; }
+
+.slick-loading .slick-slide {
+  visibility: hidden; }
+
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent; }
+
+/* Icons */
+@font-face {
+  font-family: "slick";
+  src: url("./fonts/slick.eot");
+  src: url("./fonts/slick.eot?#iefix") format("embedded-opentype"), url("./fonts/slick.woff") format("woff"), url("./fonts/slick.ttf") format("truetype"), url("./fonts/slick.svg#slick") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+/* Arrows */
+.slick-prev, .slick-next {
+  position: absolute;
+  display: block;
+  height: 20px;
+  width: 20px;
+  line-height: 0;
+  font-size: 0;
+  cursor: pointer;
+  background: transparent;
+  color: transparent;
+  top: 50%;
+  margin-top: -10px;
+  padding: 0;
+  border: none;
+  outline: none; }
+
+.slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
+  outline: none;
+  background: transparent;
+  color: transparent; }
+
+.slick-prev:hover:before, .slick-prev:focus:before, .slick-next:hover:before, .slick-next:focus:before {
   opacity: 1; }
 
-.mfp-with-zoom.mfp-ready.mfp-bg {
-  opacity: 0.8; }
+.slick-prev.slick-disabled:before, .slick-next.slick-disabled:before {
+  opacity: 0.25; }
 
-.mfp-with-zoom.mfp-removing .mfp-container,
-.mfp-with-zoom.mfp-removing.mfp-bg {
-  opacity: 0; }
+.slick-prev:before, .slick-next:before {
+  font-family: "slick";
+  font-size: 20px;
+  line-height: 1;
+  color: white;
+  opacity: 0.75;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.slick-prev {
+  left: -25px; }
+
+.slick-prev:before {
+  content: "\2190"; }
+
+.slick-next {
+  right: -25px; }
+
+.slick-next:before {
+  content: "\2192"; }
+
+/* Dots */
+.slick-slider {
+  margin-bottom: 30px; }
+
+.slick-dots {
+  position: absolute;
+  bottom: -45px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  width: 100%; }
+
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer; }
+
+.slick-dots li button {
+  border: 0;
+  background: transparent;
+  display: block;
+  height: 20px;
+  width: 20px;
+  outline: none;
+  line-height: 0;
+  font-size: 0;
+  color: transparent;
+  padding: 5px;
+  cursor: pointer; }
+
+.slick-dots li button:hover, .slick-dots li button:focus {
+  outline: none; }
+
+.slick-dots li button:hover:before, .slick-dots li button:focus:before {
+  opacity: 1; }
+
+.slick-dots li button:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "\2022";
+  width: 20px;
+  height: 20px;
+  font-family: "slick";
+  font-size: 6px;
+  line-height: 20px;
+  text-align: center;
+  color: black;
+  opacity: 0.25;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.slick-dots li.slick-active button:before {
+  color: black;
+  opacity: 0.75; }
+
+[dir="rtl"] .slick-next {
+  right: auto;
+  left: -25px; }
+
+[dir="rtl"] .slick-next:before {
+  content: "\2190"; }
+
+[dir="rtl"] .slick-prev {
+  right: -25px;
+  left: auto; }
+
+[dir="rtl"] .slick-prev:before {
+  content: "\2192"; }
+
+[dir="rtl"] .slick-slide {
+  float: right; }
 
 body {
   background: #421703; }
@@ -904,7 +1094,9 @@ a {
   color: inherit;
   -webkit-tap-highlight-color: transparent;
   -webkit-tap-highlight-color: transparent;
-  /* For some Androids */ }
+  /* For some Androids */
+  text-decoration: underline;
+  cursor: pointer; }
   a:active {
     position: relative;
     top: 1px; }
@@ -1027,7 +1219,7 @@ a {
 
 /* Menu */
 .menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -1043,9 +1235,12 @@ a {
   transition: opacity 0.5s; }
   .menu > div {
     padding: 10px; }
-  .menu.is-open {
+  .menu-isOpen .menu {
     opacity: 1;
     pointer-events: auto; }
+
+body.menu-isOpen {
+  overflow: hidden; }
 
 .menu-toggler {
   margin-top: 10px;
@@ -1063,8 +1258,6 @@ a {
 
 .menu-link {
   text-decoration: none; }
-  .menu-link:active {
-    text-decoration: underline; }
 
 .menu-language {
   display: table;
@@ -1075,7 +1268,8 @@ a {
 
 .menu-language--link {
   cursor: pointer;
-  padding: 2px 2px 0px; }
+  padding: 2px 2px 0px;
+  text-decoration: none; }
   .menu-language--link.active {
     background: #f3eee3;
     color: #421703;
@@ -1149,6 +1343,59 @@ a {
 
 .features-img {
   margin-bottom: 15px; }
+
+/* Press */
+.press-item {
+  position: relative;
+  display: block;
+  text-decoration: none;
+  margin-top: 20px;
+  padding: 8px;
+  background: white;
+  border: 1px solid #eee;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15), 0 0 20px rgba(0, 0, 0, 0.12); }
+  .press-item:active {
+    box-shadow: none;
+    border-color: #ddd; }
+
+.press-author {
+  zoom: 1;
+  margin-bottom: 8px; }
+  .press-author:before {
+    content: ".";
+    display: block;
+    height: 0;
+    overflow: hidden; }
+  .press-author:after {
+    content: ".";
+    display: block;
+    height: 0;
+    overflow: hidden;
+    clear: both; }
+
+.press-avatar {
+  width: 40px;
+  height: 40px;
+  margin-right: 8px; }
+
+.press-name {
+  margin-top: 4px;
+  line-height: 17px; }
+
+.press-quote:after {
+  position: absolute;
+  font-size: 170px;
+  line-height: 1;
+  font-weight: bold;
+  color: #f2efee;
+  content: "\201D";
+  margin-left: -20px;
+  right: 0;
+  margin-top: -40px; }
+.press-quote span {
+  position: relative;
+  text-shadow: 0 1px white, 0 -1px white, 1px 0 white, -1px 0 white;
+  z-index: 1; }
 
 /* Footer */
 .footer-image {
