--- a/pathologic/css/style.css
+++ b/pathologic/css/style.css
@@ -1355,7 +1355,7 @@ body.menu-isOpen {
   border: 1px solid #eee;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15), 0 0 20px rgba(0, 0, 0, 0.12); }
   .press-item:active {
-    box-shadow: none;
+    box-shadow: 0 2px 5px transparent, 0 0 20px transparent;
     border-color: #ddd; }
 
 .press-author {
