--- a/media/css/style.scss
+++ b/media/css/style.scss
@@ -41,6 +41,6 @@
 @import 'fontawesome';
 @import 'layout';
 @import 'typography';
-@import 'jQuery.fullPage';
+// @import 'jQuery.fullPage';
 @import 'home';
 @import 'responsive';
