work and about pages

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,12 @@ layout: default
 <div class="container--small">
 	<div class="u-textCenter">
 		<h1 class="post-title">{{ page.title }}</h1>
-		<h5 class="margin-none">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</h5>
+		<h5 class="u-text--center margin-none">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</h5>
 	</div>
 	
 	{{ content }}
 
 	<div class="u-text--center margin-large margin-bottom">
-		<a class="btn">See more work</a>
+		<a class="btn" href="/work/">See more work</a>
 	</div>
 </div>
