--- a/_sass/general/variables.scss
+++ b/_sass/general/variables.scss
@@ -1,9 +1,11 @@
 // Colours
 $black:             #2f2f2f;
 $black_light:       #4f4f4f;
+$black_lightest:    #6f6f6f;
 $gray:              #999;
 $gray_light:        #bebebe;
 $gray_lightest:     #cecece;
+$off_white:         #eee;
 $blue:              #1e92d4;
 
 // Rhythm
