--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,13 @@
 	<a class="m-siteNavigation-logo" href="{{ site.baseurl }}/"></a>
 	<ul class="m-siteNavigation-list u-text--small u-listUnstyled u-listInline">
 		<li>
-			<a class="m-siteNavigation-link" href="{{ site.baseurl }}/">Home</a>
+			<a class="m-siteNavigation-link {% if page.siteNav == 'home' %}active{% endif %}" href="{{ site.baseurl }}/">Home</a>
 		</li>
 		<li>
-			<a class="m-siteNavigation-link" href="{{ site.baseurl }}/work">Work</a>
+			<a class="m-siteNavigation-link {% if page.siteNav == 'work' %}active{% endif %}" href="{{ site.baseurl }}/work">Work</a>
 		</li>
 		<li>
-			<a class="m-siteNavigation-link" href="{{ site.baseurl }}/about">About</a>
+			<a class="m-siteNavigation-link {% if page.siteNav == 'about' %}active{% endif %}" href="{{ site.baseurl }}/about">About</a>
 		</li>
 		<li>
 			<a class="m-siteNavigation-highlight" href="mailto:{{site.email}}">Contact Me</a>
