--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 	{% include head.html %}
+
 	<body>
 
 		{% include header.html %}
@@ -9,7 +11,7 @@
 			{{ content }}
 		</div>
 
-		<!-- {% include footer.html %} -->
+		{% include foot.html %}
 
 	</body>
 
