--- a/_sass/components/code.scss
+++ b/_sass/components/code.scss
@@ -1,10 +1,10 @@
 code {
-	background: #eee;
-	color: $black_light;
 	padding: 3px 4px;
+	background: $black_light;
+	color: $off_white;
 }
 pre {
-	background: #eee;
+	background: $black_light;
 	padding: 0.35em 0.75em;
 	code {
 		padding: 0;
