--- a/_sass/components/defaults.scss
+++ b/_sass/components/defaults.scss
@@ -3,10 +3,13 @@ p {
 }
 a {
 	color: $blue;
+	color: inherit;
 	text-decoration: none;
 	cursor: pointer;
+	border-bottom: 2px solid rgba($blue, 0.33);
 	&:hover {
-		border-bottom: 2px solid;
+		color: $blue;
+		border-color: $blue;
 	}
 	&:active {
 		position: relative;
