--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -18,7 +18,9 @@
 @import 'components/code';
 
 // Modules
+@import 'modules/heroText';
 @import 'modules/home';
+@import 'modules/latestWork';
 @import 'modules/siteNavigation';
 @import 'modules/work';
 
