--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
 		{% include header.html %}
 
-		<div class="container padding--large margin-large">
+		<div class="container padding--large margin-none">
 			{{ content }}
 		</div>
 
