--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container--small">
 	<div class="u-textCenter">
 		<h1 class="post-title">{{ page.title }}</h1>
-		<h5 class="u-text--center margin-none">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</h5>
+		<h5 class="u-text--center margin-none u-hidden">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</h5>
 	</div>
 	
 	{{ content }}
